# mcp-db-results-anonymizer

./: .gitignore  .mcp.json.example  Dockerfile  LICENSE  Makefile  README.fr.md  README.md  config.example.yaml  docker-compose.yml  install.sh  pyproject.toml
docs/: CONFIGURATION.fr.md  CONFIGURATION.md  DETECTION.fr.md  DETECTION.md  HOOKS.fr.md  HOOKS.md  REVERSE_PROXY_HELP.fr.md  REVERSE_PROXY_HELP.md  SECURITY.fr.md  SECURITY.md
infra/: Makefile  fake_data_mongo.py
infra/scripts/: update_csvs.py
scripts/: install-hooks.sh  security-hook-read.sh  security-hook-write.sh  security-hook.sh  uninstall-hooks.sh
src/: config.py  server.py
src/anonymizer/: pipeline.py  pseudonymizer.py
src/database/: mssql_connector.py  mysql_connector.py  nosql_connector.py  sql_connector.py
src/detection/: column_matcher.py  registry.py  sql_lineage.py  value_scanner.py
src/security/: auth.py  rate_limiter.py  sql_validator.py
src/storage/: mapping_store.py
src/tools/: fixtures.py  metadata.py  query_nosql.py  query_sql.py
