[project]
name = "mcp-db-results-anonymizer"
version = "1.0.0"
description = "MCP server that anonymizes PII from database queries before AI agents see the results"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pymongo>=4.17",
    "faker>=40.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlglot>=30.12.0",
]

[project.optional-dependencies]
mysql = [
    "pymysql>=1.1",
]
mssql = [
    "pyodbc>=5.1",
]
all-databases = [
    "pymysql>=1.1",
    "pyodbc>=5.1",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mcp-db-results-anonymizer = "src.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
